--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "edurank-demo",
+  "name": "EDURANK",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,11 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "db:seed": "tsx prisma/seed.ts"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
@@ -33,6 +37,7 @@
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.22",
+    "dotenv": "^17.2.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -41,6 +46,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.7.1",
     "tailwindcss": "^3.4.18",
+    "tsx": "^4.20.6",
     "typescript": "^5.3.3"
   }
 }
